# bounce-fpv

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  memory.x  rust-toolchain.toml
.cargo/: config.toml
.claude/agents/: bringup-agent.md  drivers-agent.md  firmware-agent.md  protocol-agent.md  tooling-agent.md
crates/applog/: Cargo.toml  build.rs
crates/applog/src/: lib.rs  logger.rs  sd.rs  usb.rs
crates/board/: Cargo.toml
crates/board/src/: lib.rs
crates/display/: Cargo.toml
crates/display/src/: lib.rs
crates/geo/: Cargo.toml
crates/geo/src/: lib.rs
crates/goggle-node/: Cargo.toml  build.rs
crates/goggle-node/src/: main.rs
crates/gps/: Cargo.toml
crates/gps/src/: lib.rs
crates/imu/: Cargo.toml
crates/imu/src/: lib.rs
crates/link-id/: Cargo.toml
crates/link-id/src/: lib.rs
crates/lora-link/: Cargo.toml
crates/lora-link/src/: lib.rs
crates/lora-ping/: Cargo.toml  build.rs
crates/lora-ping/src/: main.rs
crates/nrf-adapters/: Cargo.toml
crates/nrf-adapters/src/: lib.rs  lora.rs  pwm.rs
crates/nrf-spike/: Cargo.toml  build.rs
crates/nrf-spike/src/: main.rs
crates/ppm-decoder/: Cargo.toml
crates/ppm-decoder/src/: lib.rs
crates/ppm-diag/: Cargo.toml  build.rs
crates/ppm-diag/src/: main.rs
crates/proto/: Cargo.toml  build.rs  headtrack.proto
crates/proto/src/: lib.rs
crates/servo/: Cargo.toml
crates/servo/src/: lib.rs
crates/truck-diag/: Cargo.toml  build.rs
crates/truck-diag/src/: lib.rs
crates/truck-node/: Cargo.toml  build.rs
crates/truck-node/src/: main.rs
docs/: 00-overview.md  01-nrf52840-migration.md
scripts/: bin2uf2.py
