[package]
name = "board"
version.workspace = true
edition.workspace = true

# Board pin-map crate. This is the ONE driver-side crate that legitimately touches the HAL's concrete
# peripheral/pin types: it partial-moves the named pins each subsystem uses out of `embassy_nrf::Peripherals`
# into a `BoardPins` struct, so the node binaries never hard-code GPIO numbers. Only one board variant exists
# today (Nice!Nano v2); it is structured so a second board could later be added behind a Cargo feature.
[dependencies]
embassy-nrf = { workspace = true }
