[package]
name = "goggle-node"
version.workspace = true
edition.workspace = true

# Goggle node binary (Phase D: nRF52840). Four Embassy tasks wired by latest-value Signals: a PPM reader (GPIO
# edge-await -> ppm-decoder -> publishes the freshest pan/tilt Control), a LoRa task (TXes the latest Control,
# then listens briefly for a Telemetry reply and signals the truck's ground speed), a NEW OLED status task (the
# panel moved off the truck), and a NEW lap-reset button task. The single I2C device (the SSD1306) uses a direct
# Twim (no shared_bus). Thin: all real logic lives in the library crates depended on below.
[dependencies]
proto = { workspace = true }
board = { workspace = true }
ppm-decoder = { workspace = true }
lora-link = { workspace = true }
link-id = { workspace = true }
nrf-adapters = { workspace = true }
display = { workspace = true }
applog = { workspace = true }

embassy-executor = { workspace = true, features = ["platform-cortex-m", "executor-thread"] }
embassy-nrf = { workspace = true }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
cortex-m-rt = { workspace = true }
static_cell = { workspace = true }
heapless = { workspace = true }
micropb = { workspace = true }
