[package]
name = "imu"
version.workspace = true
edition.workspace = true

# MPU-6050 home/center detection over mpu6050-dmp (async). Generic over an embedded-hal-async I2C; takes _N_ accel samples at boot,
# averages accel-derived roll/pitch, and stores them as the gimbal home reference.
#
# NOTE: mpu6050-dmp's async driver (`sensor_async`) is enabled via its `async` feature on the workspace pin.
[dependencies]
mpu6050-dmp = { workspace = true }
embedded-hal-async = { workspace = true }
libm = { workspace = true }
