[package]
name = "lora-ping"
version.workspace = true
edition.workspace = true

# Standalone LoRa link bring-up prototype (Phase-0-style diagnostic; Phase C: nRF52840). A single binary with two
# roles selected by a Cargo feature: default build = PINGER, `--features ponger` = PONGER. Flash one board each way;
# the pinger times the ping->pong round trip and prints RTT + RSSI/SNR + min/avg/max + lost-packet stats over USB-CDC
# via applog, the ponger echoes and prints what it heard. Validates the RFM95W/SX1276 wiring (SPI + NSS/RESET/DIO0)
# and measures latency at SF7/BW500/CR4-5 @ 915 MHz before the full goggle<->truck path is integrated. Thin: the radio
# logic lives in lora-link, the pins in board.
[dependencies]
board = { workspace = true }
applog = { workspace = true }
lora-link = { workspace = true }
# Shared SX1276/RFM95W bring-up (SPIM + NSS/RESET/DIO0 glue) used by the nodes too; returns Result so this prototype
# can log-and-park on a wiring fault instead of panicking. It owns the ExclusiveDevice + embedded-hal-bus `async` dep.
nrf-adapters = { workspace = true }
# Status OLED: the link test's PRIMARY readout (USB-CDC serial on these boards is fiddly). `display` is generic over
# an embedded-hal-async I2C, which the bound on the pinger/ponger render helpers names; heapless backs the on-panel
# line formatting; static_cell gives the Twim's tx_ram_buffer its 'static home (mirrors the truck-diag/oled bin).
display = { workspace = true }
embedded-hal-async = { workspace = true }
heapless = { workspace = true }
static_cell = { workspace = true }

embassy-executor = { workspace = true, features = ["platform-cortex-m", "executor-thread"] }
embassy-nrf = { workspace = true }
embassy-time = { workspace = true }
embassy-futures = { workspace = true }
cortex-m-rt = { workspace = true }

[features]
# Role select: default (feature OFF) = PINGER; `ponger` ON = PONGER.
default = []
ponger = []
