[package]
name = "ppm-diag"
version.workspace = true
edition.workspace = true

# Phase 0 diagnostic binary. Decodes the Skyzone PPM frame and prints per-channel
# pulse widths + channel count over the C6's built-in USB Serial/JTAG. Build/run this
# first to confirm channel count, pulse-width range, sync-gap length, and pan/tilt indices.
# Optional inverted-PPM path. Enable only when an INVERTING buffer (e.g. 74LVC1G14) sits ahead of GPIO2, flipping the
# line to idle-high with falling-edge-positioned pulses. Default OFF matches the bare series-resistor wiring.
[features]
default = []
inverted-ppm = []

[dependencies]
esp-hal = { workspace = true }
esp-rtos = { workspace = true }
esp-bootloader-esp-idf = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
esp-println = { workspace = true }
log = { workspace = true }
