[package]
name = "truck-diag"
version.workspace = true
edition.workspace = true

# Truck-node peripheral bring-up diagnostics (Phase C: nRF52840). ONE crate, FIVE binaries under src/bin/ (cargo
# auto-discovers them): `servo`, `imu`, `oled`, `gps`, and `demo`. The first four each exercise ONE peripheral in
# ISOLATION so it can be flashed and validated on hardware before the integrated truck-node run — flash one at a time,
# e.g. `cargo run --release -p truck-diag --bin servo`. `demo` is the odd one out: a no-LoRa/GPS/IMU "movie mode" that
# drives the production T1 OLED layout + both servos from synthetic data to show motion and measure panel render speed.
# The shared #[panic_handler] now lives in `applog` (each bin pulls it in via `use applog as _;`); src/lib.rs is an
# empty placeholder keeping the crate layout. Thin: all real logic lives in the servo / imu / display / gps driver
# crates + the nrf-adapters bridges; these bins just observe hardware.
[dependencies]
board = { workspace = true }
applog = { workspace = true }
nrf-adapters = { workspace = true }
servo = { workspace = true }
imu = { workspace = true }
display = { workspace = true }
gps = { workspace = true }

# The imu bin streams live accel samples for the tilt-and-watch loop, so it drives the mpu6050-dmp async driver
# directly (the imu crate only exposes the one-shot boot home routine) and converts each sample with the imu crate's
# pure roll_pitch_from_accel. embedded-hal-async names the I2C/DelayNs traits those async calls bound on.
mpu6050-dmp = { workspace = true }
embedded-hal-async = { workspace = true }
# The servo bin's sweep helpers are generic over servo's PWM bound, so they name embedded_hal::pwm::SetDutyCycle.
embedded-hal = { workspace = true }
embassy-executor = { workspace = true, features = ["platform-cortex-m", "executor-thread"] }
embassy-nrf = { workspace = true }
embassy-time = { workspace = true }
cortex-m-rt = { workspace = true }
# The imu/oled bins build a Twim whose tx_ram_buffer must outlive the 'static peripheral, and the gps bin's
# BufferedUarteRx needs a 'static RX ring buffer; a StaticCell gives each a 'static home.
static_cell = { workspace = true }

[features]
# The `gps-raw` feature (default OFF) switches the gps bin into a byte-echo mode so a wiring/baud fault is
# distinguishable from a parser fault — see src/bin/gps.rs.
default = []
gps-raw = []
